discussion/kv_engine/125164/125164_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Change MagmaRequest getKey & getKeyLen function names

These are getting confused with IORequest equivalents.

Change-Id: Ife94dd2425a8587321b78ecd7d5e6663a89daf31

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 15:48:56.000000000
Message: 
Uploaded patch set 7: New patch set was added with same tree, parent, and commit message as Patch Set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 16:42:10.000000000
Message: 
Patch Set 7:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1639/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1639/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1639/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27429/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23462/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10912/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3059/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2107/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3050/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
